Fix -version for 11